# MonadokaMagica

./: .gitignore  README.md
courses/WellTypedHaskell/: Accumulators.hs
experiments/brick-playground/: Main.hs  brick-playground.cabal
experiments/github-playground/: Common.hs  README.md  github-playground.cabal
experiments/github-playground/Activity/Starring/: PromptStarring.hs  StarredRepos.hs  UnstarRepo.hs
experiments/github-playground/Issues/: ShowIssue.hs  ShowIssueFormatting.hs
experiments/github-playground/Starring/: StarRepo.hs
