cabal-version: 3.0
name: brick-playground
version: 0.1.0.0
build-type: Simple

library
  hs-source-dirs: .
  -- exposed-modules: Common
  build-depends:
          base >= 4.14 && < 5
        , brick
        , vty >= 6.0
        , vty-unix
  default-language: Haskell2010

executable main
  main-is: Main.hs
  ghc-options: -threaded
  hs-source-dirs: .
  build-depends: 
          base >= 4.14 && < 5
        , brick
        , vty >= 6.0
        , vty-unix
        , mtl
  default-language: Haskell2010

