cabal-version: 3.0
name: github-playground
version: 0.1.0.0
build-type: Simple

library
  hs-source-dirs: .
  exposed-modules: Common
  build-depends:
        base >= 4.14 && < 5
      , github
      , text
      , dotenv
  default-language: Haskell2010

executable starring
  main-is: StarRepo.hs
  hs-source-dirs: Starring
  build-depends: 
        base >= 4.14 && < 5
      , text
      , github
      , github-playground
  default-language: Haskell2010

executable unstarring
  main-is: UnstarRepo.hs
  hs-source-dirs: Starring
  build-depends: 
        base >= 4.14 && < 5
      , text
      , github
      , github-playground
  default-language: Haskell2010
